--- a/about.qmd
+++ b/about.qmd
@@ -8,8 +8,8 @@ This project was developed by ViZZards For INFO 526 - Data Analysis and Visualiz
 
 -   Team member 1: Vikas Ruhil, 2025 Information Science
 
--   Team member 2: Yash , 2026, Data Science.
+-   Team member 2: Yash Sharma , 2026, Data Science.
 
--   Team member 3: One sentence description of Team member 3 (e.g., year, major, etc.).
+-   Team member 3: Raghav , 2026, Data Science
 
 -   Team member 4: One sentence description of Team member 4 (e.g., year, major, etc.).
